apps/faro-landing-backend/production/scope-1/Rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: faro-landing-backend
  namespace: faro-landing-backend-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faro-landing-backend
  template:
    metadata:
      labels:
        app: faro-landing-backend
    spec:
      containers:
        - name: faro-landing-backend
          image: 104.248.9.67:5000/faro-landing-backend:v1.0.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 1
              memory: 1Gi
  strategy:
    canary: {}
