apps/faro-landing-backend/production/scope-1/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faro-landing-backend
  namespace: faro-landing-backend-production
spec:
  selector:
    app: faro-landing-backend
  ports:
    - port: 80
      targetPort: 8080
